added defender stone

--- a/.gitignore
+++ b/.gitignore
@@ -8830,3 +8830,6 @@ Temp/UnityTempFile-e37d301ed9ec5284091d04720f24bf3b
 Temp/UnityTempFile-f2ec55dadc3f51b4ea16ccc913ca18dc
 Temp/UnityTempFile-fe54688b120a41148b8aece1c41fecbc
 Temp/UnityTempFile-fec0df3df43d4c244979c06a7f6278f9
+*.json
+Library/Artifacts/8c/8cee3d663d925107ca4a33ea322b09ae
+Library/Artifacts/f5/f55cdda2e60a30b7024abe719a13ee52
