added defender die animation trigger

--- a/.gitignore
+++ b/.gitignore
@@ -8833,3 +8833,30 @@ Temp/UnityTempFile-fec0df3df43d4c244979c06a7f6278f9
 *.json
 Library/Artifacts/8c/8cee3d663d925107ca4a33ea322b09ae
 Library/Artifacts/f5/f55cdda2e60a30b7024abe719a13ee52
+Library/Artifacts/08/08c39759e110f189f20d9513c8adeadc
+Library/Artifacts/15/15049763408a1b34b4093192f2952df0
+Library/Artifacts/1e/1ecc29afab6de9c117b2fdf57f446aa8
+Library/Artifacts/26/2613164f57455fbab83d8e89a1f27625
+Library/Artifacts/58/581e7fdcdb484aadd587d21b805c521c
+Library/Artifacts/58/58cbf5ad71f602fa160af553049b4531
+Library/Artifacts/5c/5c87006fe18a6cf867164071f3f3fb22
+Library/Artifacts/5d/5d23fda11139bdf70ddf3873421ba355
+Library/Artifacts/65/651c006a9e33b1817ea2b04f4cbef3fd
+Library/Artifacts/6e/6e645c7cd99b7e14349b4bd8c84abd37
+Library/Artifacts/90/9091de8a85d5bebf57189a9a4e985181
+Library/Artifacts/92/9227d7d81ec9980a1356538ad67fd1c2
+Library/Artifacts/a4/a4c206ff2d7abe7cb833a152a7c6d0c0
+Library/Artifacts/a7/a720aade7d5529e41e035d2b7f28ca55
+Library/Artifacts/aa/aaa64a961dfc183496e289113a439fee
+Library/Artifacts/ab/ab54b4d4b1731d4ff85b4755b29a54ad
+Library/Artifacts/b1/b17d30b5ada7acd3e82f4e79c62c9f0c
+Library/Artifacts/b5/b58e6f3039bbd2da69aa1153af3e4b24
+Library/Artifacts/bd/bd8f82a407e4316b76e50389b44988b7
+Library/Artifacts/cc/cc474fab32e3b84241f36383b5ec6121
+Library/Artifacts/d0/d06249bb5dcac7bc275e52518050a2a0
+Library/Artifacts/d3/d36a4fda5d17404fc7fc540f09f44ad0
+Library/Artifacts/d8/d8f87ce521da04a6a989a7a2ef058d51
+Library/Artifacts/f7/f720eaadd70c2d8ffdf01695acc48934
+Library/Artifacts/ff/ff0190abe8467bf0cfd75080a40c5443
+Temp/UnityTempFile-1582bc94f9fb74a4bad5da1281717475
+Temp/UnityTempFile-b1e0361e1925fa2428928224ccdd7031
