Added Dino attack animation

--- a/.gitignore
+++ b/.gitignore
@@ -8860,3 +8860,38 @@ Library/Artifacts/f7/f720eaadd70c2d8ffdf01695acc48934
 Library/Artifacts/ff/ff0190abe8467bf0cfd75080a40c5443
 Temp/UnityTempFile-1582bc94f9fb74a4bad5da1281717475
 Temp/UnityTempFile-b1e0361e1925fa2428928224ccdd7031
+Library/Artifacts/02/027e8b83f87f7f48fe5994bdb31c3c8b
+Library/Artifacts/09/09c2e6b1f4d3d2ec61e8f0060bbdff22
+Library/Artifacts/0e/0eac02fddaadcf2ab84069ede3afc93e
+Library/Artifacts/13/1331dc9ac1a22624b7f1b7e90fc4161e
+Library/Artifacts/1d/1d9d35a9e681315e0ee095150b45f211
+Library/Artifacts/24/2419544f632f31e759c477f55c2d331b
+Library/Artifacts/39/39e72be8fa711e67cd9f528343f71b05
+Library/Artifacts/48/483dcfb458c465d2615488ed2b1e93a9
+Library/Artifacts/53/531a4cc7fd1d470afa8a459457b31d74
+Library/Artifacts/65/65eba70326d5832062734ec8226afbdb
+Library/Artifacts/7e/7e5c5cc145a538c5238bef867e3d6abf
+Library/Artifacts/91/91e1f015df06b0e63616d5ffa4394515
+Library/Artifacts/af/afa72812e4ceadb374d0efffe30318cb
+Library/Artifacts/b0/b028ff35eb6437e26ddce0aae7fbf11d
+Library/Artifacts/b2/b2cdb03a53afed01b40d76d601ffc93a
+Library/Artifacts/b3/b3f7f697976dbea4cd166e556ae11ad5
+Library/Artifacts/b7/b7ba965b06fd9e454b499b6ffb3f4612
+Library/Artifacts/b9/b9f194ff6b330a0b4b8e690afca34084
+Library/Artifacts/f5/f58e63acaf67b6537ec6288938834d6a
+Library/Artifacts/f6/f6f7eb6154812fc823351b018be1d73b
+Library/Artifacts/fa/fa72292c0b08f44b4f080148e93cf5bf
+Temp/UnityTempFile-207346c7d29a8e54aaae63351c095b21
+Temp/UnityTempFile-44a8a7156d9cd8f4088d0ecfa24d8f5a
+Temp/UnityTempFile-480fc98f75107a946a5874d92028e8d5
+Temp/UnityTempFile-589eca7166ec74a4a8a1ca443ceb9f0b
+Temp/UnityTempFile-5b5063670eaf4d3448f57a9ce88dcc07
+Temp/UnityTempFile-6fef1c30deadb1a489f56b37c72f0aea
+Temp/UnityTempFile-7255c520d297ec14181fe588d1f3dfdc
+Temp/UnityTempFile-931621659a9ec904f949396fd6cd3245
+Temp/UnityTempFile-b5ae99b9a0f04b04993cdea43ed8a0dd
+Temp/UnityTempFile-b6e8c74306094774c90c622a9de1acfb
+Temp/UnityTempFile-b8f5fcb199527e947a423cdcf1eb91fb
+Temp/UnityTempFile-bea3fd6f35dad9248a0e498a3f2cb8d9
+Temp/UnityTempFile-dbe27192e1d15f146bdc3aef1f3e1a07
+Temp/UnityTempFile-e82d36e7265e905498697b92bafcba9c
