seperate specific attacker behavior from generic attacker script

--- a/.gitignore
+++ b/.gitignore
@@ -8895,3 +8895,11 @@ Temp/UnityTempFile-b8f5fcb199527e947a423cdcf1eb91fb
 Temp/UnityTempFile-bea3fd6f35dad9248a0e498a3f2cb8d9
 Temp/UnityTempFile-dbe27192e1d15f146bdc3aef1f3e1a07
 Temp/UnityTempFile-e82d36e7265e905498697b92bafcba9c
+Library/Artifacts/2c/2cbfc1e380df281ae2c7736bbcb15379
+Library/Artifacts/33/33a83263a116b5ada710d421cf649b1d
+Library/Artifacts/46/46979b7c24c50c230272cdcd26006a4f
+Library/Artifacts/db/db32b578ca4826fd9f6bc8f90d00bae1
+Library/Artifacts/e1/e1d77366e2b6b3529cbf530b51786d3e
+Temp/UnityTempFile-06d15397763a65749839f13725c58446
+Temp/UnityTempFile-7b28148f24afa0f4b885949524e4982f
+Temp/UnityTempFile-f4a47ab57ff518746af539ccbbe26247
