add fox attacker
fox attacker has parent child gameobjects where all the animation is found on the child while the parent holds all scripts

--- a/.gitignore
+++ b/.gitignore
@@ -8903,3 +8903,131 @@ Library/Artifacts/e1/e1d77366e2b6b3529cbf530b51786d3e
 Temp/UnityTempFile-06d15397763a65749839f13725c58446
 Temp/UnityTempFile-7b28148f24afa0f4b885949524e4982f
 Temp/UnityTempFile-f4a47ab57ff518746af539ccbbe26247
+Library/Artifacts/06/06262ad985c9a0f939f383eef8659f71
+Library/Artifacts/09/0910bb101f944033793f8bc3b9ac2465
+Library/Artifacts/0c/0cdd0bf239a71d6f0e9ebbfa6502e78c
+Library/Artifacts/0f/0f125e3b37f25710e7982010e086f18e
+Library/Artifacts/10/1035d18b953968aa135f491d4e59e9ae
+Library/Artifacts/11/11f3326d6dbd5f5a70cfa310aec56263
+Library/Artifacts/13/133615c0734a4d494a3561c4bad53c1e
+Library/Artifacts/17/178c4001358f2cc395c169f0ad15d829
+Library/Artifacts/18/18267fb69514836e243206a9a7221196
+Library/Artifacts/19/19503c6f9ab399575d31cf3bbfcc278a
+Library/Artifacts/21/2178ef5a1a5162732e7aa00e5caf12a6
+Library/Artifacts/24/24edd60fe97080af46c9ff7fafcdf66c
+Library/Artifacts/2a/2a7f0a986390b84bfa0370e1291f1cf0
+Library/Artifacts/2c/2c3b14ad472946c7f3ef17b67d1d9785
+Library/Artifacts/34/34cb75a39a38b15c36290e4fe81a6e35
+Library/Artifacts/35/35e3f92136dca3c5baf929739b9e8aa8
+Library/Artifacts/37/378b92c2f7558e981335ce8f830f1405
+Library/Artifacts/39/39a81f156cced60f68374bf64593c5da
+Library/Artifacts/3a/3a08d10ff12094306ce9e83a7c1dcf26
+Library/Artifacts/3b/3b86818a9cb443c066e6fb58ad005986
+Library/Artifacts/41/41ecfb7f6c7419d29bf67aa0d3d50f45
+Library/Artifacts/43/43f97528fca17d3cf426eafb4e56c4f1
+Library/Artifacts/44/44f4381b29453834983b0ee31ae2f3ed
+Library/Artifacts/45/451e1c5975dbae90e80b62c512f6167f
+Library/Artifacts/45/45c0185dc1588bddd869f00754b453e6
+Library/Artifacts/48/4806526fac1f864bca10247441880253
+Library/Artifacts/4a/4a153fc20c09dc87c86500bdba1c9d3b
+Library/Artifacts/4c/4c129487a2099e55d0a574d55176d263
+Library/Artifacts/4d/4dd7cc8f618c63300289a69329dc93f6
+Library/Artifacts/4e/4ee936fd84899712b08c497be6bb5d9f
+Library/Artifacts/52/5270881d44c680646c258f9d7501069e
+Library/Artifacts/55/5506ea471cf3717a549ecbf59e0c1654
+Library/Artifacts/55/55516745c103ab4669faaf52da677af7
+Library/Artifacts/55/5583f8a3119fdd0b1072438a656707aa
+Library/Artifacts/55/55b0613320a9b694c1db9c62f1ccde65
+Library/Artifacts/57/57b8974a67389003815a7ce8aa8bee37
+Library/Artifacts/5a/5a4ffc6d2dfc13242983da2ed8bef214
+Library/Artifacts/5d/5da5ba5f655565886cbece8c2f2f2025
+Library/Artifacts/63/6344e4644980239d243374b0575e63f1
+Library/Artifacts/6f/6f753ccf6ce6d23f1390f3dfd7733dc7
+Library/Artifacts/76/76f19a8527b40a71190dd9e5ebe9b20a
+Library/Artifacts/77/770aa6a160a2325e554627f0918cc7b0
+Library/Artifacts/78/788881519de2869fdca885219bc92e1a
+Library/Artifacts/7a/7a48d2d5aa7186cf132efbf0bfd0be12
+Library/Artifacts/7d/7d0d446596fafff00c3c27827e8c3505
+Library/Artifacts/80/8038a7564462a0b1375c95bd13d00bd6
+Library/Artifacts/80/8051461d965f7e03260449df9761dbdb
+Library/Artifacts/80/80a50ee25a2b7ddae5e0fd31815c9705
+Library/Artifacts/83/83e19da5556e9b8ff289fbfb210632f0
+Library/Artifacts/87/87db5971024005ee318135bdbf72ec02
+Library/Artifacts/89/8972ddbed43831edc2490a96fa2be5e6
+Library/Artifacts/8c/8c062e3b981a1fcfe9d30abb724ca75e
+Library/Artifacts/8d/8defd5220ff489e1a50230ded04db06f
+Library/Artifacts/8e/8ea563913b77e944f072336d57897af2
+Library/Artifacts/8e/8ee99f66c50e106e3dfa08ba540b7298
+Library/Artifacts/9b/9b8eab60303dd909658607633de9e90b
+Library/Artifacts/9c/9ce24fd315052ac73489b051010db9f1
+Library/Artifacts/a0/a0d6bb68ea44770e77cd2bf893ac2d88
+Library/Artifacts/a1/a172b9706ec0507948431a223ced404f
+Library/Artifacts/a5/a51f0091a2d54bc185ebf78d7f64bd1f
+Library/Artifacts/a5/a5d43cdfd193dab1c7f79f557521e508
+Library/Artifacts/a5/a5e178d18d1e867292d1f87cfcfb6309
+Library/Artifacts/aa/aacd722882e314ead5ad039b9ac48786
+Library/Artifacts/b5/b53063fabba0cd099c25e312c45f1df7
+Library/Artifacts/b5/b53be45a07a75ba8ea191a2bf4d104a9
+Library/Artifacts/b7/b7c97745f2a1604949bd5e0f953b4aeb
+Library/Artifacts/bc/bc5774293328866a3ba18fbd448d3e73
+Library/Artifacts/c5/c530abd02d83047e00c7984bdf03db18
+Library/Artifacts/c8/c805666ad637a1976522508aa063d804
+Library/Artifacts/c8/c876aa85d48fda3d3419171ef02a723f
+Library/Artifacts/ca/ca9ec79f2838000727a0f93a14e388e0
+Library/Artifacts/ca/cac70ba53ac32d0456d0711d05d5dfe0
+Library/Artifacts/ce/ce6d3366fee6976ae2521d2b713bedc4
+Library/Artifacts/ce/cec86db16439e35102a9ab595c73dda0
+Library/Artifacts/d0/d02a5b0ea5186ae41f5ddc11892dc98a
+Library/Artifacts/d4/d449419cfba1efbe8efa672ff9d1443b
+Library/Artifacts/dc/dc803428e3b9d532c01008f0f5d7c710
+Library/Artifacts/dd/dd4edf0cebc8011920e2cf827d7d5da7
+Library/Artifacts/de/de57ea986d287c43b597e85db2acbbdc
+Library/Artifacts/e1/e1f3d70af5b98c6054d72f0fe5401c92
+Library/Artifacts/e3/e3cf23ea8c4242031e00bacc63f64082
+Library/Artifacts/e5/e5767f2f76d5eb9255e54fe907037261
+Library/Artifacts/e7/e78564e79e0133921bcfbd9d6d533786
+Library/Artifacts/ea/ea3cdeb89eedd90ff595208c09ddaac2
+Library/Artifacts/ee/ee7a8f65b1825bcfd328db5a3c7ba575
+Library/Artifacts/f2/f287bf52d6503dab46f4e7863cf0d500
+Library/Artifacts/f6/f6ae46ec7802de7172f105d95bed6d41
+Library/Artifacts/f6/f6f0d08b7b04737a53fa376d103ad500
+Library/Artifacts/f9/f9ea11afc7ca8e1857603966a2ab37b1
+Library/Artifacts/fe/fe3ba184b321fe305fbff9878854d62f
+Temp/UnityTempFile-01324ccb7f8e4804aaa1581f2311d71e
+Temp/UnityTempFile-0392036fd9c4d4c4580f0390cb7130c6
+Temp/UnityTempFile-0615835fe274c0c4db099a0401fde541
+Temp/UnityTempFile-0817cd01c2cdb26439c383e41667ec47
+Temp/UnityTempFile-0b0e42b76cef9374b94800f2ac78a234
+Temp/UnityTempFile-316c2f76d8f948143b8e9c0706b2011f
+Temp/UnityTempFile-3497eb82a7eed114f88ecb1e90d24737
+Temp/UnityTempFile-36572df1f6243af4baf1be51330cafc7
+Temp/UnityTempFile-37fe642ee8820ff4a9a3340f4a5cfe70
+Temp/UnityTempFile-39815f78ce66dfa4c83ef7aca1a90445
+Temp/UnityTempFile-3c477ec8dc856af49991d7b7463c4b44
+Temp/UnityTempFile-4153f6d1def927d4d935b26d5a81b56f
+Temp/UnityTempFile-487b06f85336a1a43b8f203993c5a993
+Temp/UnityTempFile-4e1b8742995bd694ba5abefe1d18fbc7
+Temp/UnityTempFile-53434aba7188f0845992f2bd1e3dda98
+Temp/UnityTempFile-584a69d68a3f223459a086774b493b71
+Temp/UnityTempFile-5fc140210ae6e1e4ea0b23b111e0f9a9
+Temp/UnityTempFile-5fda4932a68466842a49db55fd53e51c
+Temp/UnityTempFile-6adfdc0322809534f80bc6460aa61518
+Temp/UnityTempFile-6b57ba1e8ee2fb94799657a7b2bf3354
+Temp/UnityTempFile-6f4167f5e2f1ccf41998a39029f7f1f1
+Temp/UnityTempFile-75987348f88ab224ab1c2818926a99a2
+Temp/UnityTempFile-809d5f6e50e4b4948ba8ce0269268f8f
+Temp/UnityTempFile-882e54aed2c3d82479dce2a1de8eb4ac
+Temp/UnityTempFile-898622ddde6d64f48b163731464df789
+Temp/UnityTempFile-8b229257e665c27498acd81f1e123302
+Temp/UnityTempFile-8f3e49e896df7b74e96aebba181f2ebb
+Temp/UnityTempFile-9b1fde608a4b07c47ade6a7c14911753
+Temp/UnityTempFile-9f370e5a56f24e248a812bc236426318
+Temp/UnityTempFile-b7eb1632d649a41428c06f6fea3ccace
+Temp/UnityTempFile-c0f28ca34d9c6d741b6aa46c4c634b6b
+Temp/UnityTempFile-c44dfb4a502cfbf40afec299509533ff
+Temp/UnityTempFile-c6826ca2d8360244ea74b5450b7beaac
+Temp/UnityTempFile-d3ab6a6a85cdf6d4dacb35d9ffc571d7
+Temp/UnityTempFile-d48eadbedc45cf04380cb53e439d3b70
+Temp/UnityTempFile-d5456827d5db83d4bb3c8a170fa1cbfe
+Temp/UnityTempFile-e589b8b229f0adb40aac6b3e51ae714c
+Temp/UnityTempFile-f2b98b95dc3815f49a6740a64598dfe1
