--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,12 +69,14 @@
     <Compile Include="Assets\Scripts\Defender.cs" />
     <Compile Include="Assets\Scripts\DefenderButton.cs" />
     <Compile Include="Assets\Scripts\Dino.cs" />
+    <Compile Include="Assets\Scripts\Fox.cs" />
     <Compile Include="Assets\Scripts\GoldDisplay.cs" />
     <Compile Include="Assets\Scripts\LevelLoader.cs" />
     <Compile Include="Assets\Scripts\Projectile.cs" />
     <Compile Include="Assets\Scripts\Shooter.cs" />
     <Compile Include="Assets\Scripts\Shredder.cs" />
     <Compile Include="Assets\Scripts\SpawnArea.cs" />
+    <Compile Include="Assets\Scripts\Stone.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>D:/Sandbox/unity/unity2D/Garden/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
