spawn random attackers

--- a/.gitignore
+++ b/.gitignore
@@ -9031,3 +9031,21 @@ Temp/UnityTempFile-d48eadbedc45cf04380cb53e439d3b70
 Temp/UnityTempFile-d5456827d5db83d4bb3c8a170fa1cbfe
 Temp/UnityTempFile-e589b8b229f0adb40aac6b3e51ae714c
 Temp/UnityTempFile-f2b98b95dc3815f49a6740a64598dfe1
+Library/Artifacts/29/29b8ac0fff34d0bb4b23f5a3a0e0d006
+Library/Artifacts/40/40efb8642af4e63d968a07bc60c54b37
+Library/Artifacts/51/51b1e68633ef9b7783cec5a3e185ce5c
+Library/Artifacts/52/5288247bc744fc34ce6befe77b6a951d
+Library/Artifacts/5b/5b0d76e25df94718ba3b876dd29e457f
+Library/Artifacts/6c/6ce858dfa6cfc68e7048b46b7194998d
+Library/Artifacts/6f/6f6c102c2c7b65e79f890879925acf97
+Library/Artifacts/70/70d169c4b601669122bae7ee2a749467
+Library/Artifacts/84/8471d1002f122013caac5092a62b6112
+Library/Artifacts/91/91326832ee08b30c5f8ac023e2f47e10
+Library/Artifacts/93/937928ad73748e94493ee55ed6b30b0e
+Library/Artifacts/a3/a3544d83575f9403a65f5e0b319b71b1
+Library/Artifacts/c6/c6708796f110da9f4424af432c34cc44
+Library/Artifacts/d7/d772a5cd033122d037e3794f496c29fa
+Library/Artifacts/f6/f6a99a5c6acbcd178fa1c1110e583b12
+Temp/UnityTempFile-324d19779cc46c34cb7a8fba1e424f94
+Temp/UnityTempFile-8e8aa8603d3caeb459170cafb0620beb
+Temp/UnityTempFile-a76b2123019d25b42be8540b62b3a7c5
