track player health
player health takes damage when attackers collides with shredder behind home base

--- a/.gitignore
+++ b/.gitignore
@@ -9049,3 +9049,52 @@ Library/Artifacts/f6/f6a99a5c6acbcd178fa1c1110e583b12
 Temp/UnityTempFile-324d19779cc46c34cb7a8fba1e424f94
 Temp/UnityTempFile-8e8aa8603d3caeb459170cafb0620beb
 Temp/UnityTempFile-a76b2123019d25b42be8540b62b3a7c5
+*.bin
+Library/Artifacts/0c/0c14578f8d53e579cd5421f922b5f55b
+Library/Artifacts/19/1966f6e729aeee8d4e6ed3a7e0eaebc9
+Library/Artifacts/19/19e4282521ffaa1cbaa99e153a0f2834
+Library/Artifacts/1b/1b3b1978ae7f53033840f299a740ef15
+Library/Artifacts/22/225a5d8bbb2d034e6fb0eec7931604ed
+Library/Artifacts/26/2631dbf53ed572c05e4d52beca7d7a4d
+Library/Artifacts/31/31252181a9919b837fbd9ad69b5b3329
+Library/Artifacts/4b/4bd0fc388c712aa5cb612329f924d398
+Library/Artifacts/53/530f964e1f656b7d4aa7ea3349758893
+Library/Artifacts/5c/5cabca8df86f9950294108c0e031e95d
+Library/Artifacts/64/6477365bfdc8948bb48e3c1d15ce4779
+Library/Artifacts/74/7487037dbd873139d166bd85f8f3f664
+Library/Artifacts/78/7825fe0a999570295f7a353fbe68504c
+Library/Artifacts/79/7962208f699dcd81c4a23e1639a701fe
+Library/Artifacts/7d/7dff0e42ab91ba39d21ea04aa17c1bd2
+Library/Artifacts/98/985d23b07d4c4387ae7e0a92a26a610a
+Library/Artifacts/bc/bcd5faa524227a181ca88393f71cfe76
+Library/Artifacts/d6/d62599e258a2320817d1f30b7cd91701
+Library/Artifacts/d6/d64def53f90e617c4e345152b7268835
+Library/Artifacts/d6/d68708ff17b637fe8297a6bc831f2d66
+Library/Artifacts/d7/d7a791c5654eecfc1a698b045b2f18a5
+Library/Artifacts/da/da0f840ed6b867fc70d421d5c7b3a3b9
+Library/Artifacts/db/db795b7bd1a66accff40fcac491cc1dc
+Library/Artifacts/f0/f0719650b2e1fdcbb351348349bd3838
+Library/Artifacts/f8/f8ac5239b0f38c4dd7a42d830779377f
+Library/Artifacts/f9/f94eff5112e439f8d9375578a00b3f4a
+Library/Artifacts/fb/fb9eaa73d835d521f655ed39f00953a7
+Temp/UnityTempFile-08ff596b4b85f504c944450f27fbec32
+Temp/UnityTempFile-0a7852a8a1da0eb4b8f8f1a4f261e78f
+Temp/UnityTempFile-2de0fc566e709504896a8b11ff517c0e
+Temp/UnityTempFile-3abb345ce3fb7794eab1c63aff0230dc
+Temp/UnityTempFile-3c420dfbcba52114cb6f6b0f517706eb
+Temp/UnityTempFile-436e85e27261f9844a0a122a07af4c53
+Temp/UnityTempFile-449f01e8b918c3c4cb1b6b6daf6a2ddc
+Temp/UnityTempFile-524a1f6adad83e546bd955801267f498
+Temp/UnityTempFile-624af701abfe6194199460a2bf80d910
+Temp/UnityTempFile-6615d50300202e147960a98ea18a26c1
+Temp/UnityTempFile-66539c0896385fd41bbbc1309168ccb3
+Temp/UnityTempFile-67621d17df27b0c4cb5c62683f0ce339
+Temp/UnityTempFile-68a3047c12ef33a44a1501dc72fa0682
+Temp/UnityTempFile-690abfa743b42b747a4b198d8eccb0c9
+Temp/UnityTempFile-753ac70f23c33264fa8eed0cbef7b2e0
+Temp/UnityTempFile-b630c1b123d46a44a9dc17a279b3f046
+Temp/UnityTempFile-c07dac62bc9c58444bf4792c4ebb811c
+Temp/UnityTempFile-d3665563d92cd764f84dc071f66d23a9
+Temp/UnityTempFile-df55ea73202181f4196b248fd8605458
+Temp/UnityTempFile-f8672f8033fd51f46969e42f6537091a
+Temp/UnityTempFile-fcdbcfbce2277a247b3d93b7608c6878
