mock Game End scene

--- a/.gitignore
+++ b/.gitignore
@@ -11393,3 +11393,74 @@ Temp/UnityTempFile-c5bcfc22c0e7f7f49b6f2ea878052e1d
 Temp/UnityTempFile-ca26578899f009446a6dec0c68004cb5
 Temp/UnityTempFile-ca7c577abd4c4154c8f76987dd893dbe
 Temp/UnityTempFile-d284b2899fe7e804cb40406b95c03622
+Library/Artifacts/09/09a933b71bd0e4fe19194df7a75e4c27
+Library/Artifacts/1d/1d3bebd3e3dc7bdaf975b52b0f8fe1b2
+Library/Artifacts/23/23929154b4acc23ac4491b565408e70f
+Library/Artifacts/27/27c333f418e22fb184e5964ddcc5b3b2
+Library/Artifacts/29/2915696b55ec6993e928c4328ad6bee9
+Library/Artifacts/2a/2ac8877f39080f54c1c086bc3af5c986
+Library/Artifacts/2b/2b8a0b64ffb199f05e10c7e32b4af320
+Library/Artifacts/2d/2d0ae0dd28c5079f20c54c7157901008
+Library/Artifacts/2f/2f0eea2e95b93bad2c0fc8d80bd612d5
+Library/Artifacts/39/39b5c46a9e4dead5a2cd9249ecba9f48
+Library/Artifacts/41/41177a391dfa1cf227c23fc2ae2df9d5
+Library/Artifacts/44/447d5f0df1d54fcfaff06b0bd1de8c5d
+Library/Artifacts/47/47a4c3ac2dc479cc94074461734f0629
+Library/Artifacts/49/494674c8e2bd6c2ec829efd58de85879
+Library/Artifacts/54/54b2502e11b8722529b83f266ae8cbba
+Library/Artifacts/5b/5bd0e6227e1e028ab2046b3e3d5f70a6
+Library/Artifacts/5c/5c81f33a41343ba5abd11f6d0d9889e3
+Library/Artifacts/7e/7ec5cc4aadc4cb877bd07030360b681a
+Library/Artifacts/83/83c05f35fbcca04cd97eabb2cda1e506
+Library/Artifacts/8d/8de50c62dc446c204db7df8ff6967417
+Library/Artifacts/9b/9bf32730090ffc388021ad9c705a2429
+Library/Artifacts/9f/9f9314f084bfdf9e0ac3dfe6d99b23bc
+Library/Artifacts/a6/a653576d9c6d47dd8ae37c456a1ee9a8
+Library/Artifacts/a8/a8a2316825dc52df960bd06a4bae565a
+Library/Artifacts/af/af62849eccd9e22c7aa0ebfcd52a2911
+Library/Artifacts/b1/b17120a280375590f2f81d215aeac8e3
+Library/Artifacts/b3/b320190ce3fff9796b8d1a938ff6cc15
+Library/Artifacts/c5/c50242725337ad05b0c79646768c00f5
+Library/Artifacts/c5/c518303e025325648fa568f1a2b1641f
+Library/Artifacts/ca/ca0b6ba893188cca6b59c77aeb9144b2
+Library/Artifacts/d6/d6ccf0a396def055a10efe76a8a8ef5f
+Library/Artifacts/e1/e143522910f33299781f168666bd7163
+Library/Artifacts/e5/e57186635cf150ebd569c94bf8a1baef
+Library/Artifacts/eb/ebc6a2d31626842f1d4db4c490cf31b7
+Library/Artifacts/ec/ec5291a42f507ed65a8633cc673429ec
+Library/Artifacts/f1/f133b99eb9df9904e31fd060ad094755
+Library/Artifacts/f2/f26e2735b129cc84366eb0b0d7274daa
+Library/Artifacts/f3/f310404c44be0b43bca8d067807ed428
+Library/Artifacts/f4/f4a869fffc47eaba1a1d0d0087ed9acc
+Library/Artifacts/f6/f66c8c81a5c4197773baa33f03b8b36c
+Library/Artifacts/f7/f70a9a92a8cc111ea05d788f19acbbb2
+Library/Artifacts/fa/fa987cefcf1a860dc07f700737bfb942
+Temp/UnityTempFile-03b0fb6ee9eae4543bd1ad5cab6243b3
+Temp/UnityTempFile-043fbe50988dc5e4cac5ebe22bce3160
+Temp/UnityTempFile-0e237d3d3560998468837d86809e11f5
+Temp/UnityTempFile-15cbe50910a46764d9e8030ea0326e4c
+Temp/UnityTempFile-39b803842f9337744a31c0d9d2c1d164
+Temp/UnityTempFile-3af844dafe137bc49b11a6bc566ad3b3
+Temp/UnityTempFile-40b148e75a286a7429ac99d4c1035447
+Temp/UnityTempFile-4b7c17cb006f36242b933deec4acfa2d
+Temp/UnityTempFile-5d5a050efd315e44b82caa10a39d481e
+Temp/UnityTempFile-5f7d33052e9349647bfa63819e4de5ae
+Temp/UnityTempFile-6a1d88f9876a89c4b860055b8c49622d
+Temp/UnityTempFile-77744839e55cd9a48b297e88edddd414
+Temp/UnityTempFile-7f133e3599ed05148925af3b06e0947d
+Temp/UnityTempFile-8fdb54a13b77ebc43bbbe3cd44b45763
+Temp/UnityTempFile-9c0e05a359432fd4992af1da360024ea
+Temp/UnityTempFile-aa1866047547eca448e0de66efbdfec2
+Temp/UnityTempFile-b8c4a608a6a366f4791cf3d3911d4971
+Temp/UnityTempFile-c658d601206ca0443aadaf93cdc49f1c
+Temp/UnityTempFile-ce4eb9b9811b04541910fa7b745b5498
+Temp/UnityTempFile-dcc9d6ac484ddeb429133d93c616ac75
+Temp/UnityTempFile-dcdefc8d3ede3ec498abb763c73d8961
+Temp/UnityTempFile-dec5044a022cb0e47afceda7c259b875
+Temp/UnityTempFile-e2f69aeb62973d6498e5dde7194da04c
+Temp/UnityTempFile-e3e800b5e16d052419bcd1ccf38ca565
+Temp/UnityTempFile-eab56698588d56d40b5a30e5638f764f
+Temp/UnityTempFile-ed921a663edb1bf4f84fc6813f26d04b
+Temp/UnityTempFile-ef5ca749fd541c145b0e78f3f4d08f63
+Temp/UnityTempFile-f9c7860cef09361448bb44d58cde9bb2
+Temp/UnityTempFile-fcc79478aa6f57a4da9d3ac59c74044b
